[gd_scene load_steps=19 format=3 uid="uid://c3v8nlxywqyqa"]

[ext_resource type="AudioStream" uid="uid://dkkwwurrolc2o" path="res://sounds/clash.wav" id="1_8fqm1"]
[ext_resource type="Script" uid="uid://mhiq62s42a0" path="res://scripts/item_weapon_component.gd" id="1_8qe33"]
[ext_resource type="AudioStream" uid="uid://c063r8wnxd3ak" path="res://sounds/parry.wav" id="2_8qe33"]
[ext_resource type="Script" uid="uid://c6dsf65nsvdek" path="res://scripts/net_synchronizer.gd" id="2_ilgqc"]
[ext_resource type="AudioStream" uid="uid://b8fq6pdoch6od" path="res://sounds/swing.wav" id="3_yxk4n"]
[ext_resource type="AudioStream" uid="uid://eeke6pi5ko7x" path="res://sounds/parry_swing.wav" id="4_kbh2r"]
[ext_resource type="Script" uid="uid://bk18ju17dkdg2" path="res://addons/proton_trail/proton_trail.gd" id="5_3n3ri"]
[ext_resource type="Material" uid="uid://c3jhvcexel6he" path="res://models/mace/trail.tres" id="6_gvmlv"]

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_75gxx"]
random_pitch = 1.1
streams_count = 1
stream_0/stream = ExtResource("1_8fqm1")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_jt3m8"]
random_pitch = 1.1
streams_count = 1
stream_0/stream = ExtResource("2_8qe33")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_v3dck"]
random_pitch = 1.1
streams_count = 1
stream_0/stream = ExtResource("3_yxk4n")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_rqd8l"]
random_pitch = 1.1
streams_count = 1
stream_0/stream = ExtResource("4_kbh2r")

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_8qe33"]
resource_local_to_scene = true
radius = 0.03
height = 0.7

[sub_resource type="Curve" id="Curve_3v00d"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_ilgqc"]
curve = SubResource("Curve_3v00d")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_3v00d"]
resource_local_to_scene = true
particle_flag_align_y = true
emission_shape = 3
emission_box_extents = Vector3(0.02, 0.3, 0.02)
angle_min = 1.07288e-05
angle_max = 1.07288e-05
spread = 180.0
initial_velocity_min = 2.0
initial_velocity_max = 5.0
gravity = Vector3(0, 0, 0)
scale_min = 4.0
scale_max = 5.0
scale_curve = SubResource("CurveTexture_ilgqc")
turbulence_enabled = true

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_3v00d"]
albedo_color = Color(0.847059, 0.611765, 0, 1)
emission_enabled = true
emission = Color(0.845336, 0.376351, 0, 1)

[sub_resource type="BoxMesh" id="BoxMesh_ilgqc"]
resource_local_to_scene = true
material = SubResource("StandardMaterial3D_3v00d")
size = Vector3(0.01, 0.01, 0.01)

[node name="ItemWeaponComponent" type="Node3D"]
script = ExtResource("1_8qe33")

[node name="NetSynchronizer" type="Node" parent="."]
script = ExtResource("2_ilgqc")
networked_properties = Array[StringName]([&":swing_damaging", &":hitstop_time_left"])
metadata/_custom_type_script = ExtResource("2_ilgqc")

[node name="Clash" type="AudioStreamPlayer3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.647459, 0)
stream = SubResource("AudioStreamRandomizer_75gxx")
attenuation_model = 3
max_distance = 10.0
attenuation_filter_db = 0.0

[node name="Parry" type="AudioStreamPlayer3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.461109, 0)
stream = SubResource("AudioStreamRandomizer_jt3m8")
attenuation_model = 3
volume_db = -12.0
max_distance = 20.0
attenuation_filter_db = 0.0

[node name="Swing" type="AudioStreamPlayer3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.647459, 0)
stream = SubResource("AudioStreamRandomizer_v3dck")
attenuation_model = 3
max_distance = 10.0
attenuation_filter_db = 0.0

[node name="ParrySwing" type="AudioStreamPlayer3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0689685, 0)
stream = SubResource("AudioStreamRandomizer_rqd8l")
attenuation_model = 3
max_distance = 5.0
attenuation_filter_db = 0.0

[node name="ProtonTrail" type="Node3D" parent="."]
script = ExtResource("5_3n3ri")
material = ExtResource("6_gvmlv")
smooth = 1.0
cast_shadow = false
metadata/_custom_type_script = ExtResource("5_3n3ri")

[node name="Top" type="Marker3D" parent="ProtonTrail"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.823524, 0)

[node name="Bottom" type="Marker3D" parent="ProtonTrail"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.152165, 0)

[node name="Hitbox" type="ShapeCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.482, 0)
enabled = false
shape = SubResource("CapsuleShape3D_8qe33")
exclude_parent = false
target_position = Vector3(0, 0, 0)
max_results = 1
collision_mask = 9

[node name="ParryParticles" type="GPUParticles3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
emitting = false
amount = 20
lifetime = 0.2
one_shot = true
explosiveness = 1.0
process_material = SubResource("ParticleProcessMaterial_3v00d")
draw_pass_1 = SubResource("BoxMesh_ilgqc")
